--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,10 @@
 #!/bin/make
 
-SOURCES = resources.c xmlfunc.c main.c
+SOURCES = resources.c textfilefunc.c textlistwindow.c xmlfunc.c conffile.c main.c
 
 CFLAGS  = `pkg-config --cflags gtk+-3.0`
+
+#CPPFLAGS = -Wno-deprecated-declarations -Wno-incompatible-pointer-types -Wno-int-conversion -Wno-sign-compare -fmax-errors=3
 
 LIBS    = `pkg-config --libs gtk+-3.0` -lX11 -lXtst -lXext 
 
@@ -11,7 +13,7 @@ TARGET  = mdclip
 
 all:
 	glib-compile-resources --generate-source resources.xml
-	gcc $(CFLAGS) $(INC) $(SOURCES) -o $(TARGET) $(LIBS)
+	gcc $(CPPFLAGS) $(CFLAGS) $(INC) $(SOURCES) -o $(TARGET) $(LIBS)
 
 clean:
 			rm -rf mdclip *.o
